--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd-mobile": "^2.3.1",
     "axios": "^0.27.2",
     "node-sass": "^7.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
